Added tests to OwnerMapService. Closes #49.